k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devboard
  labels:
    gateway-access: "true"
