k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devboard-frontend-service
  namespace: devboard
spec:
  selector:
    app: devboard-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4173
      nodePort: 30080
  type: NodePort
