k8s/argocd-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: devboard-gateway
      namespace: devboard
      sectionName: argocd-https
  hostnames:
    - argocd.opswithrahul.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
