k8s/grafana-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: observability
spec:
  parentRefs:
    - name: devboard-gateway
      namespace: devboard
      sectionName: grafana-https

  hostnames:
    - grafana.opswithrahul.com

  rules:
    - backendRefs:
        - name: observability-grafana
          port: 80
